# arduino_dct

./: .gitignore  CMakeLists.txt  README.md  dct.cpp  dct.h  input.cpp  input.h  main.cpp  math.h  output.cpp  output.h
gnuplot/: compare_dct_and_signal.plt  plot.sh  test.plt
signal_samples/: sinus  sinusoids  squarewave  y1  y2  y3  y4  y5  y6  y7  y8
ui/: CMakeLists.txt  README.md  imgui_impl_glfw_gl2.cpp  imgui_impl_glfw_gl3.cpp  main.cpp  main_gl2.cpp  main_gl3.cpp  mainwindow.cpp  mainwindow.h  utils.cpp  utils.h
